fix(core): fix spacing on single selects using avatars

--- a/core/src/components/cat-select/cat-select.scss
+++ b/core/src/components/cat-select/cat-select.scss
@@ -96,7 +96,12 @@ label {
   min-width: 0;
 
   > cat-avatar {
-    padding-left: 0.25rem;
+    display: inline-block;
+    padding-left: 0.5rem;
+
+    &+.select-input {
+      padding-left: 0.25rem;
+    }
   }
 
   cat-avatar {
